Implement password salting and hashing.

--- a/src/main/resources/templates/controlpanel.html
+++ b/src/main/resources/templates/controlpanel.html
@@ -58,4 +58,5 @@
         $("#responseMessage").text(responseMessage);
     }
 </script>
+<script type="text/javascript" th:src="@{javascript/common.js}"></script>
 </html>
