--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -83,29 +83,23 @@
     });
 
     $(".publisherSelector").change(function(){
-            var publisher = $( this ).val();
+        var publisher = $( this ).val();
 
-            $(".articleRow").each(function(i, element){
-                element.remove();
-            });
-
-            if(publisher == "All"){
-                $.each(articles, function(i, article){
-                        createTableRow(article);
-                });
-            } else {
-                $.each(articles, function(i, article){
-                    if(article.publisher == publisher){
-                        createTableRow(article);
-                    }
-                });
-            }
+        $(".articleRow").each(function(i, element){
+            element.remove();
         });
 
-    $("#logout").click(function(){
-        clearCookies();
-        $.get("/logout");
-        window.location = "/";
+        if(publisher == "All"){
+            $.each(articles, function(i, article){
+                    createTableRow(article);
+            });
+        } else {
+            $.each(articles, function(i, article){
+                if(article.publisher == publisher){
+                    createTableRow(article);
+                }
+            });
+        }
     });
 
     function fetchArticles(data){
@@ -158,13 +152,6 @@
         }
     }
 
-    function setCookie(cname, cvalue, exdays) {
-        var d = new Date();
-        d.setTime(d.getTime() + (exdays*24*60*60*1000));
-        var expires = "expires="+ d.toUTCString();
-        document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
-    }
-
     function getCookie(cname) {
         var name = cname + "=";
         var decodedCookie = decodeURIComponent(document.cookie);
@@ -179,12 +166,6 @@
             }
         }
         return "";
-    }
-
-    function clearCookies(){
-        setCookie("stayLoggedIn", "0", -1);
-        setCookie("username", "", -1);
-        setCookie("password", "", -1);
     }
 
     function isLoggedIn(){
@@ -240,4 +221,5 @@
     }
 
 </script>
+<script type="text/javascript" th:src="@{javascript/common.js}"></script>
 </html>
